--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -54,10 +54,14 @@ a {
       margin-left: 0; } }
 
 .page-header {
-  color: #fff;
-  text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+    color: white;
+    text-align: center;
+    min-width: 100%;
+    min-height: 320px;
+    height: 320px;
+    background: -webkit-linear-gradient(315deg, #e88371 0%, #e85f63 100%);
+    background: linear-gradient(135deg, #e88371 0%, #e85f63 100%);
+}
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -112,7 +116,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #159957; }
+  color: #e85f63; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
